test/cases/compile_errors/unreachable_code-nested_returns.zig
export fn a() i32 {
    return return 1;
}

// error
//
// :2:5: error: unreachable code
// :2:12: note: control flow is diverted here
